<resources>
    <string name="app_name">Get Random Joke</string>
    <string name="btnNewGenerateText">Сгенерировать</string>
    <string name="loadingErrorHintText1">Загрузка…</string>
    <string name="loadingErrorHintText2">Пожалуйста подождите</string>
    <string name="internet_error_toast_text">Ошибка загрузки! Проверьте подключение к интернету!</string>
    <string name="change_generate_rules_button_text">Кнопка для изменения правил генерации шуток</string>
    <string name="loadingProgressBarText1">Загрузка…</string>
    <string name="loadingProgressBarText2">Пожалуйста, подождите :)</string>
    <string name="like_joke_button_text">Кнопка для лайка шутки</string>
    <string name="one_joke_load_error_text">Ошибка загрузки!</string>
    <string name="one_joke_try_load_later_text">Повторите позже</string>
    <string name="clown_view_text_1">Серьёзно? \n Хочешь сгенерировать 0 анекдотов?</string>
    <string name="clown_view_text_2">Премия клоун года достаётся тебе :)</string>
    <string name="need_jokes_cnt_input_hint_text">Введите число</string>
    <string name="need_jokes_cnt_input_title_text">Сколько?</string>
    <string name="rb_list_of_jokes_text">Несколько</string>
    <string name="rb_one_joke_text">Один</string>
    <string name="rg_choose_jokes_cnt_title_text">Сколько анекдотов сгенерировать?</string>
    <string name="rg_choose_id_title_text">Id анекдота случайный?</string>
    <string name="id_input_hint_text">Введите id</string>
    <string name="etNeedJokeIdInputWarningText">Значение должно быть от 1 до 451</string>
    <string name="rbSetIdText">Поиск по id</string>
    <string name="rbRandomIdText">Случайный</string>
    <string name="clown_text" translatable="false">clown</string>
    <string name="toolbar_logo_text">Иконка приложения с клоуном</string>
    <string name="favorites_list_icon_text">favorites list</string>
    <string name="get_random_joke_text">Get Random Joke</string>
    <string name="go_back_btn_text">Вернуться назад</string>
    <string name="favorite_jokes_toolbar_text">Избранные анекдоты</string>
</resources>